native/pearl-gemm/csrc/capi/pearl_gemm_capi.h

// ABI version. Bumped on incompatible signature changes.
//
//   4 — PearlCapiInstallBParams gained `salted_seeds`, and install_B derives
//       the B-side seed with the real m/n and flag instead of routing through a
//       wrapper that hardcoded (0, 0, false). Below v4 the ENTIRE B-side noise
//       field is built from a legacy seed once per σ and never corrected, so
//       every share is unprovable post-fork.
//   3 — PearlCapiWorkspaceParams gained `salted_seeds`, and the per-iter
//       commitment hash reads it instead of the process global. A v2 library
//       loaded by a v3 host would ignore the field and silently derive legacy
//       seeds for every share, so the host MUST refuse to mine below 3 rather
//       than discover it as a 100% reject rate.
//   2 — baseline.
int pearl_capi_abi_version(void);
// Native build profile reporting. Used by miner startup to fail fast when a
// loaded architecture-specific .so cannot run on the selected GPU.
const char* pearl_capi_build_profile(void);
int pearl_capi_supports_sm(int major, int minor);
// Sizes (bytes).
int     pearl_capi_get_host_signal_sync_size(void);
int     pearl_capi_get_host_signal_header_size(void);
int64_t pearl_capi_get_required_scratchpad_bytes(int64_t matrix_bytes,
                                                 int     threads_per_block);
// Salted-seed hardfork (pearl PR #280 + #282, mainnet height 99,000).
//
// NOT the mining path any more — both the per-iter and install-B paths read the
// per-σ `salted_seeds` field on their params struct. This remains the process
// default for callers with no params struct, and for diagnostics.
// Selects the noise-seed derivation:
//   0 = V2 legacy   seeds chain straight off the raw Merkle roots
//   1 = V3 salted   each root is first bound to its dimension under a
//                   domain-separated keyed BLAKE3 (A→m, B→n)
//
// Deliberately a setter and not a params-struct field: adding an export is
// additive, so this does NOT move the pearl_capi ABI version and an older host
// still links. Defaults to 0; the host calls it once it knows the chain height.
// Getting it wrong in either direction produces rejected shares, never
// silently devalued ones.
void pearl_capi_set_salted_seed(int on);
int  pearl_capi_get_salted_seed(void);
// Device-side noise-seed derivation, for host/device equivalence testing.
// Runs the same kernel the mining path uses. All pointers are HOST memory.
int pearl_capi_derive_noise_seeds(const uint8_t* A_merkle_root,
                                  const uint8_t* B_merkle_root,
                                  const uint8_t* job_key,
                                  int m, int n, int salted,
                                  uint8_t* out_a_seed,
                                  uint8_t* out_b_seed,
                                  void* stream);
// Full native B-side σ install. The caller must have already computed AHash
// for the throwaway A seed. If `expand_bseed != 0`, `bseed` must point to the
// 32-byte host BSeed and resident `B` is regenerated before hashing. If
// `expand_bseed == 0`, resident `B` is reused and only rehashed with `key`.
// Internally does:
//   optional BSeed -> B + BHash, else tensor_hash(B) -> BHash
//   commitment_hash(AHash, BHash) -> CommitA/CommitB
//   noise_gen(B-side only)
//   noise_B(B, EBR, EBL, EAR) -> BpEB/EARxBpEB
struct PearlCapiInstallBParams {
    int32_t m, n, k, r;
    int32_t expand_bseed;
    uint32_t th_num_blocks;
    uint32_t th_threads;
    uint32_t th_stages;
    uint32_t th_leaves;
    int32_t device_id;

    const uint8_t* bseed;  // host pointer, nullable when expand_bseed == 0
    void* B;
    void* BHash;
    void* Key;
    void* Roots;
    void* AHash;
    void* CommitA;
    void* CommitB;
    void* EAR_K_major;
    void* EBL_R_major;
    void* EBL_K_major;
    void* EBR;
    void* EBR_fp16;
    void* EARxBpEB;
    void* BpEB;
    void* workspace;
    void* LeafCvs;  // optional total_leaves x 32B device buffer

    // ABI v4. Noise-seed derivation for THIS σ: 0 = legacy, non-zero = salted/V3.
    //
    // This install path derives CommitB and then generates the B-side noise
    // (EBR/EBL) and BpEB from it, ONCE per σ — the per-iter path never
    // regenerates them. It previously routed through
    // pearl_capi_commitment_hash_from_merkle_roots, which hardcodes
    // (m=0, n=0, salted=false), so post-fork the whole B-side noise field was
    // built from a LEGACY b_seed while the host proved against the V3 one.
    // Every share then missed by ~30 bits and was dropped pre-submit.
    int32_t salted_seeds;
};
int pearl_capi_install_B(const struct PearlCapiInstallBParams* p,
                         void* stream);
// Per-σ workspace pool.  Holds the noise_A / noise_B int32 scratch buffers
// and the transcript buffer used by noisy_gemm.  Allocate once per σ-refresh
// (the buffers' sizes are determined by m, n, k, r which are stable across
// nonces within a σ), pass the handle in every noise_B / noisy_gemm call,
// then free on σ-rotation.  This removes per-iter cudaMallocAsync overhead
// — the repo's perf notes attribute ~30 % of portable wall time to this.
//
// `with_noise_A` and `with_noise_B` toggle whether each scratchpad is
// allocated; in pure-miner mode noise_B runs only once per σ inside the
// σ-refresh path while noise_A runs every iter inside noisy_gemm.  Setting
// `with_noise_B=0` after the σ-refresh is permitted (the noise_B scratch is
// still kept around so a re-refresh can reuse the same workspace).
//
// All allocations are stream-ordered (cudaMallocAsync / cudaFreeAsync) on
// the supplied stream.
int pearl_capi_workspace_alloc(int32_t m, int32_t n, int32_t k, int32_t r,
                               int with_noise_A, int with_noise_B,
                               void** out_workspace, void* stream);
int pearl_capi_workspace_free(void* workspace, void* stream);
// Per-σ constant parameter cache — eliminates per-iter argument marshalling.
//
// Call pearl_capi_workspace_install_params() ONCE after workspace_alloc and
// after all device pointers / seeds are stable (i.e. at σ-install time).
// The workspace then caches ALL constants so the per-iter hot path can use
// the minimal pearl_capi_iter() call (4 args instead of 40 across 5 calls).
//
// Fields must remain valid for the lifetime of the workspace (device
// pointers do not need to be stable host-side; only the pointer values
// themselves are stored).
struct PearlCapiWorkspaceParams {
    // Dimensions (constant for σ lifetime).
    int32_t m, n, k, r;

    // Matmul tiling — must match a built kernel instantiation.
    int32_t bM, bN, bK, cM, cN;

    // TensorHash constants (equal to TENSOR_HASH_THREADS/STAGES/LEAVES).
    uint32_t th_num_blocks;   // = ceil(m*k / (th_threads * 1024))
    uint32_t th_threads;      // = 128
    uint32_t th_stages;       // = 2
    uint32_t th_leaves;       // = 512

    // seed_hi for lcg_int7_fill (= σ seed, constant within σ lifetime).
    uint64_t sigma_seed;

    // Device pointers — content changes per-iter but pointer values are const.
    void* A;              // m×k int8   (overwritten by lcg_int7 each iter)
    void* B;              // n×k int8
    void* AHash;          // tensor_hash output (overwritten each iter)
    void* BHash;          // tensor_hash output for B (computed at σ-install)
    void* Key;            // blake3 job key
    void* Roots;          // merkle roots intermediate (overwritten each iter)
    void* CommitA;        // commitment hash A output (overwritten each iter)
    void* CommitB;        // commitment hash B output
    void* EAL;            // m×r int8
    void* EAL_fp16;       // m×r fp16
    void* EBR;            // n×r int8
    void* EBR_fp16;       // n×r fp16
    void* EAR_R_major;    // k×r int8
    void* EBL_R_major;    // k×r int8
    void* EAR_K_major;    // r×k int8
    void* EBL_K_major;    // r×k int8
    void* AxEBL_fp16;     // m×r fp16
    void* EARxBpEB_fp16;  // n×r fp16
    void* ApEA;           // m×k int8
    void* BpEB;           // n×k int8
    void* A_scales;       // m   fp32
    void* B_scales;       // n   fp32
    void* C;              // m×n bf16
    void* host_signal_sync;   // device int8 — dSync coordination block
    void* pow_target;         // device uint32[8]
    void* pow_key;            // device uint32[8]

    // ABI v3. Noise-seed derivation for THIS σ: 0 = legacy (raw Merkle roots),
    // non-zero = salted/V3 (roots bound to m/n first). Per-workspace and not a
    // process global on purpose — the host re-derives these same seeds when it
    // builds a share, and if the two reads straddle a fork flip the miner
    // searches one noise field and proves another. Carrying it on the σ params
    // means the value cannot change under a batch that is already in flight.
    // See pearl_capi_set_salted_seed for the (non-mining) global default.
    int32_t salted_seeds;
};
// Install constant params into the workspace.  Must be called before the
// first pearl_capi_iter() call.  Safe to call again on σ-rotation (the
// workspace's scratch memory is reused; only the param cache is updated).
int pearl_capi_workspace_install_params(void* workspace,
                                        const struct PearlCapiWorkspaceParams* p);
// Batched variant of pearl_capi_iter() — runs `count` consecutive nonces:
//   seed_lo_start + [0..count-1]
// against host_signal_header_pinned_batch[i] for slot i.
// Reduces managed/native transition overhead in the miner hot path by doing
// one C-ABI call per batch instead of one call per iter.
int pearl_capi_iter_batch(void*         workspace,
                          uint64_t      seed_lo_start,
                          void* const*  host_signal_header_pinned_batch,
                          int32_t       count,
                          void*         stream);
// CUDA graph variant of pearl_capi_iter_batch(). Prepare captures a fixed
// batch shape and fixed host header slots into the workspace. Launch replays
// the graph for a new consecutive seed range. If `count` differs from the
// prepared batch count, callers should use pearl_capi_iter_batch instead.
int pearl_capi_iter_batch_graph_prepare(
    void*         workspace,
    void* const*  host_signal_header_pinned_batch,
    int32_t       count,
    void*         stream);
int pearl_capi_iter_batch_graph_launch(
    void*     workspace,
    uint64_t  seed_lo_start,
    void*     stream);
// Deterministic int7 fill of a device buffer. Each output byte is in
// [-63, +63] (matches torch.randint(-63, 64) range used by pure-miner's
// matrix_factory.fresh_A). Output is a deterministic function of
// (seed_lo, seed_hi) — caller can re-run the same algorithm on the host
// to recover the exact A used by any iteration without keeping per-iter
// snapshot buffers. dst is a device pointer.
int pearl_capi_lcg_int7_fill(void* dst,
                             int64_t n,
                             uint64_t seed_lo,
                             uint64_t seed_hi,
                             void*    stream);